--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,16 @@
   </dependencies>
   <build>
     <finalName>crossd-admin</finalName>
+
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>6.1.10</version>
+      </plugin>
+
+    </plugins>
   </build>
+
+
 </project>
