--- a/pom.xml
+++ b/pom.xml
@@ -183,11 +183,6 @@
     </dependency>
 
     <!-- json -->
-    <!--<dependency>-->
-      <!--<groupId>com.google.code.gson</groupId>-->
-      <!--<artifactId>gson</artifactId>-->
-      <!--<version>${json.version}</version>-->
-    <!--</dependency>-->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-lgpl</artifactId>
@@ -227,6 +222,19 @@
       <version>2.3</version>
       <classifier>jdk15</classifier>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.6.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.10</version>
+    </dependency>
+
   </dependencies>
 
 
