--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 ######C3P0 MySQL config #######
-c3p0.url=jdbc:mysql://crossd123.mysql.rds.aliyuncs.com:3306/crossd_test?useUnicode=true&characterEncoding=utf8&mysqlEncoding=utf8&allowMultiQueries=true
+c3p0.url=jdbc:mysql://crossd123.mysql.rds.aliyuncs.com:3306/crossd?useUnicode=true&characterEncoding=utf8&mysqlEncoding=utf8&allowMultiQueries=true
 c3p0.user=crossd
 c3p0.password=JUMAO123
 
